--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,14 @@
 
     <meta charset="UTF-8">
     <title>{{title}}</title>
-    <!-- BOOTSTRAP -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <!-- STYLESHEETS -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/styles.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/animate.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/wow.css') }}">
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='scripts/wow.js') }}"></script>
@@ -29,15 +31,15 @@
 
       <nav class="header">
 
-        <h1 class="title"><a href="/blog">Build a Blog</a></h1>
-        <a href="/post" class="left">New Post</a>
-        <a href="/blog?sort=oldest" class="right">Oldest</a>
-        <a href="/blog?sort=newest" class="right newest">Newest</a>
+        <h1 class="title"><a href="/">Blogz!</a></h1>
+        <a href="/blog" class="left spacing">View All Posts</a>
+        <a href="/newpost"><i class="fa fa-pencil" aria-hidden="true"></i> New Post</a>
+        <a href="/logout" class="right"><i class="fa fa-sign-out"></i> Logout</a>
+        <a href="/login" class="right spacing"><i class="fa fa-sign-in"></i> Login</a>
 
       </nav>
       {% block content %}
       {% endblock %}
-
     </div>
 
   </body>
